Add Example endpoints and docs
